Fixed header image wrapping

--- a/jumbotron.css
+++ b/jumbotron.css
@@ -7,5 +7,7 @@ body {
 .jumbotron {
 	background-image: url(img/1640-colgan-blur.jpg);
 	background-position: left;
+	background-repeat: no-repeat;
+	background-size: cover;
 	color: #fff;
 }
